--- a/index.html
+++ b/index.html
@@ -351,8 +351,10 @@
                     <tbody>
                         <tr><td>1.</td><td>30GB 30 HARI</td><td>IDR 60.000</td><td>1GB/DAY</td></tr>
                         <tr><td>2.</td><td>30GB 5 HARI</td><td>IDR 38.000</td><td>24 JAM</td></tr>
-                        <tr><td>3.</td><td>75GB 7 HARI</td><td>IDR 57.000</td><td>24 JAM</td></tr>
-                        <tr><td>4.</td><td>150GB 28 HARI</td><td>IDR 138.000</td><td>24 JAM</td></tr>
+                        <tr><td>3.</td><td>60GB 30 HARI</td><td>IDR 90.000</td><td>2GB/DAY</td></tr>
+                        <tr><td>4.</td><td>65GB 30 HARI</td><td>IDR 98.000</td><td>24 JAM</td></tr>
+                        <tr><td>5.</td><td>75GB 7 HARI</td><td>IDR 57.000</td><td>24 JAM</td></tr>
+                        <tr><td>6.</td><td>150GB 28 HARI</td><td>IDR 138.000</td><td>24 JAM</td></tr>
                     </tbody>
                 </table>
             </div>
