--- a/index.html
+++ b/index.html
@@ -324,6 +324,8 @@
             
             <div class="footer-note">
                 <div class="note-item"><i>⚠️</i> Harga Sewaktu-Waktu Bisa Berubah</div>
+                <div class="note-item"><i>⚠️</i> Jumlah Kuota Di Atas Khusus Area 2</div>
+                <div class="note-item"><i>⚠️</i> Area 1 Lebih Sedikit, 3-4 Lebih Banyak</div>
                 <div class="note-item"><i>⏰</i> Bayar Langsung / Maksimal Malam Hari</div>
             </div>
         </div>
