--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
             <div class="footer-note">
                 <div class="note-item"><i>⚠️</i> Harga Sewaktu-Waktu Bisa Berubah</div>
                 <div class="note-item"><i>⚠️</i> Circle Tidak Menambah Masa Aktif</div>
-                <div class="note-item"><i>⚠️</i> Jika Mau Menambah Masa Aktif, Berikan Keterangan</div>
+                <div class="note-item"><i>⚠️</i> Jika Mau Menambah Masa Aktif, Berikan Keterangan Pas Waktu Order</div>
                 <div class="note-item"><i>⚠️</i> Harga +2K Dengan Masa Aktif Via OTP</div>
                 <div class="note-item"><i>⏰</i> Bayar Langsung / Maksimal Malam Hari</div>
             </div>
