--- a/index.html
+++ b/index.html
@@ -261,22 +261,22 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr><td>1.</td><td>5GB - 9GB</td><td>IDR 22.000</td></tr>
-                        <tr><td>2.</td><td>10GB - 14GB</td><td>IDR 27.000</td></tr>
-                        <tr><td>3.</td><td>15GB - 19GB</td><td>IDR 32.000</td></tr>
-                        <tr><td>4.</td><td>20GB - 24GB</td><td>IDR 37.000</td></tr>
-                        <tr><td>5.</td><td>25GB - 29GB</td><td>IDR 42.000</td></tr>
-                        <tr><td>6.</td><td>30GB - 34GB</td><td>IDR 47.000</td></tr>
-                        <tr><td>7.</td><td>35GB - 39GB</td><td>IDR 52.000</td></tr>
-                        <tr><td>8.</td><td>40GB - 44GB</td><td>IDR 58.000</td></tr>
-                        <tr><td>9.</td><td>45GB - 49GB</td><td>IDR 63.000</td></tr>
-                        <tr><td>10.</td><td>50GB - 54GB</td><td>IDR 68.000</td></tr>
-                        <tr><td>11.</td><td>55GB - 59GB</td><td>IDR 74.000</td></tr>
-                        <tr><td>12.</td><td>60GB - 64GB</td><td>IDR 79.000</td></tr>
-                        <tr><td>13.</td><td>65GB - 69GB</td><td>IDR 84.000</td></tr>
-                        <tr><td>14.</td><td>70GB - 74GB</td><td>IDR 89.000</td></tr>
-                        <tr><td>15.</td><td>75GB - 79GB</td><td>IDR 95.000</td></tr>
-                        <tr><td>16.</td><td>80GB - 84GB</td><td>IDR 100.000</td></tr>
+                        <tr><td>1.</td><td>9GB</td><td>IDR 25.000</td></tr>
+                        <tr><td>2.</td><td>14GB</td><td>IDR 30.000</td></tr>
+                        <tr><td>3.</td><td>19GB</td><td>IDR 35.000</td></tr>
+                        <tr><td>4.</td><td>24GB</td><td>IDR 40.000</td></tr>
+                        <tr><td>5.</td><td>29GB</td><td>IDR 45.000</td></tr>
+                        <tr><td>6.</td><td>34GB</td><td>IDR 50.000</td></tr>
+                        <tr><td>7.</td><td>39GB</td><td>IDR 55.000</td></tr>
+                        <tr><td>8.</td><td>44GB</td><td>IDR 60.000</td></tr>
+                        <tr><td>9.</td><td>49GB</td><td>IDR 65.000</td></tr>
+                        <tr><td>10.</td><td>54GB</td><td>IDR 70.000</td></tr>
+                        <tr><td>11.</td><td>59GB</td><td>IDR 75.000</td></tr>
+                        <tr><td>12.</td><td>64GB</td><td>IDR 80.000</td></tr>
+                        <tr><td>13.</td><td>69GB</td><td>IDR 85.000</td></tr>
+                        <tr><td>14.</td><td>74GB</td><td>IDR 90.000</td></tr>
+                        <tr><td>15.</td><td>79GB</td><td>IDR 97.000</td></tr>
+                        <tr><td>16.</td><td>84GB</td><td>IDR 102.000</td></tr>
                     </tbody>
                 </table>
             </div>
