--- a/index.html
+++ b/index.html
@@ -462,8 +462,8 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr><td>1.</td><td>XL 1 BULAN</td><td>IDR 5.000</td><td>OTP</td></tr>
-                        <tr><td>2.</td><td>XL 1 BULAN</td><td>IDR 11.000</td><td>NON OTP</td></tr>
+                        <tr><td>1.</td><td>XL 1 BULAN (Gangguan)</td><td>IDR 5.000</td><td>OTP</td></tr>
+                        <tr><td>2.</td><td>XL 1 BULAN</td><td>IDR 13.500</td><td>NON OTP</td></tr>
                         <tr><td>3.</td><td>AXIS 1 BULAN</td><td>IDR 11.000</td><td>NON OTP</td></tr>
                         <tr><td>4.</td><td>AS 1 BULAN</td><td>IDR 19.000</td><td>NON OTP</td></tr>
                         <tr><td>5.</td><td>AS 3 BULAN</td><td>IDR 45.000</td><td>NON OTP</td></tr>
