--- a/index.html
+++ b/index.html
@@ -462,19 +462,21 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr><td>1.</td><td>XL 1 BULAN (Gangguan)</td><td>IDR 5.000</td><td>OTP</td></tr>
+                        <tr><td>1.</td><td>XL 1 BULAN (Gangguan)</td><td>IDR 5.000</td><td>VIA OTP</td></tr>
                         <tr><td>2.</td><td>XL 1 BULAN</td><td>IDR 13.500</td><td>NON OTP</td></tr>
-                        <tr><td>3.</td><td>AXIS 1 BULAN</td><td>IDR 11.000</td><td>NON OTP</td></tr>
-                        <tr><td>4.</td><td>AS 1 BULAN</td><td>IDR 19.000</td><td>NON OTP</td></tr>
-                        <tr><td>5.</td><td>AS 3 BULAN</td><td>IDR 45.000</td><td>NON OTP</td></tr>
-                        <tr><td>6.</td><td>AS 1 TAHUN</td><td>IDR 160.000</td><td>NON OTP</td></tr>
-                        <tr><td>7.</td><td>TRI 4 BULAN</td><td>IDR 12.000</td><td>NON OTP</td></tr>
+                        <tr><td>3.</td><td>XL 1 TAHUN</td><td>IDR 30.000</td><td>VIA OTP</td></tr>
+                        <tr><td>4.</td><td>AXIS 1 BULAN</td><td>IDR 11.000</td><td>NON OTP</td></tr>
+                        <tr><td>5.</td><td>AS 1 BULAN</td><td>IDR 19.000</td><td>NON OTP</td></tr>
+                        <tr><td>6.</td><td>AS 3 BULAN</td><td>IDR 45.000</td><td>NON OTP</td></tr>
+                        <tr><td>7.</td><td>AS 1 TAHUN</td><td>IDR 160.000</td><td>NON OTP</td></tr>
+                        <tr><td>8.</td><td>TRI 4 BULAN</td><td>IDR 12.000</td><td>NON OTP</td></tr>
                     </tbody>
                 </table>
             </div>
             
             <div class="footer-note">
                 <div class="note-item"><i>⚠️</i> Harga Sewaktu-Waktu Bisa Berubah</div>
+                <div class="note-item"><i>⚠️</i> Khusus Mastif XL 1 Tahun, Itu Reload Perbulan (Non Garansi)</div>
                 <div class="note-item"><i>⏰</i> Bayar Langsung / Maksimal Malam Hari</div>
             </div>
         </div>
